--- a/main.css
+++ b/main.css
@@ -15,15 +15,22 @@ html {
     margin: 0 auto;
 }
 
-header {
+header, footer {
     background-color: #192a56;
     padding-top: 16px;
     color: #fff;
 
 }
 
-header > .container{
-    display: flex;
+header {
+    position: sticky; /*deixar ele fixado assim */
+    top: 0;
+    left: 0;
+    z-index: 1; /*trazer ele para frente*/
+}
+
+header > .container,
+footer > .container{
     justify-content: space-between;
     align-items: center;
     padding-bottom: 16px;
@@ -60,4 +67,105 @@ nav li a{
     display: block;
     width: 100%;
     margin-bottom: 4px;
+}
+
+.container-flex{
+    display: flex;
+}
+
+#sobre-a-loja img{
+    max-width: 400px;
+    margin-right: 24px;
+}
+
+section {
+    padding: 48px 0;
+}
+
+section h2{
+    margin-bottom: 16px;
+}
+
+.lista-veiculos {
+    flex-wrap: wrap;
+}
+
+.lista-veiculos li{
+    list-style: none;
+    max-width: 30%;
+    margin-bottom: 24px;
+}
+.lista-veiculos li h3{
+    margin: 16px 0;
+}
+
+.lista-veiculos img {
+    width: 100%;
+}
+
+.item-central {
+    margin: 0px 5%;
+}
+
+button{
+    display: block;
+    border: none;
+    padding: 8px 0;
+    background-color: #119759;
+    color: #fff;
+    font-size: 16px;
+    font-style: italic;
+    font-weight: bold;
+    width: 100%;
+    cursor: pointer;
+    border-radius: 6px;
+}
+
+.price{
+    display: block;
+    margin: 16px 0;
+}
+
+.price del {
+    color:#ccc;
+    font-size: 14px;
+}
+
+.form-campo{
+    margin-bottom: 16px;
+}
+
+.form-campo label{
+    font-weight: bold;
+    display: block;
+}
+
+.form-campo input,
+.form-campo textarea{
+    display: block;
+    width: 100%;
+    padding: 8px;
+
+}
+
+.form-campo textarea{
+    resize: none;
+    height: 120px;
+}
+
+form{
+    max-width: 360px;
+}
+
+form button{
+    max-width: 120px;
+}
+
+footer li{
+    list-style: none;
+    margin-left: 16px;
+}
+
+footer li img{
+    height: 32px;
 }
